[#32175] Better error handling of invalid input [KLO, 110512]
SVN-Revision: 2968