@@ -72,7 +72,7 @@ import java.util.*;
  * <li>Comments written in the slashshlash, slashstar, and hash conventions will
  * be ignored.</li>
  * </ul>
- * 
+ *
  * @author JSON.org
  * @version 2
  */
@@ -92,7 +92,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Construct a JSONArray from a JSONTokener.
-     * 
+     *
      * @param x A JSONTokener
      * @throws JSONException If there is a syntax error.
      */
@@ -131,7 +131,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Construct a JSONArray from a source sJSON text.
-     * 
+     *
      * @param string A string that begins with <code>[</code>&nbsp;<small>(left
      *        bracket)</small> and ends with <code>]</code>&nbsp;<small>(right
      *        bracket)</small>.
@@ -143,7 +143,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Construct a JSONArray from a Collection.
-     * 
+     *
      * @param collection A Collection.
      */
     public JSONArray(Collection collection) {
@@ -153,7 +153,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Get the object value associated with an index.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return An object value.
      * @throws JSONException If there is no value for the index.
@@ -169,7 +169,7 @@ public class JSONArray implements Serializable {
     /**
      * Get the boolean value associated with an index. The string values "true"
      * and "false" are converted to boolean.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return The truth.
      * @throws JSONException If there is no value for the index or if the value
@@ -189,7 +189,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Get the double value associated with an index.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return The value.
      * @throws JSONException If the key is not found or if the value cannot be
@@ -207,7 +207,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Get the int value associated with an index.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return The value.
      * @throws JSONException If the key is not found or if the value cannot be
@@ -222,7 +222,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Get the JSONArray associated with an index.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return A JSONArray value.
      * @throws JSONException If there is no value for the index. or if the value
@@ -238,7 +238,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Get the JSONObject associated with an index.
-     * 
+     *
      * @param index subscript
      * @return A JSONObject value.
      * @throws JSONException If there is no value for the index or if the value
@@ -254,7 +254,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Get the long value associated with an index.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return The value.
      * @throws JSONException If the key is not found or if the value cannot be
@@ -268,7 +268,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Get the string associated with an index.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return A string value.
      * @throws JSONException If there is no value for the index.
@@ -279,7 +279,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Determine if the value is null.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return true if the value at the index is null, or if there is no value.
      */
@@ -291,7 +291,7 @@ public class JSONArray implements Serializable {
      * Make a string from the contents of this JSONArray. The
      * <code>separator</code> string is inserted between each element. Warning:
      * This method assumes that the data structure is acyclical.
-     * 
+     *
      * @param separator A string that will be inserted between the elements.
      * @return a string.
      * @throws JSONException If the array contains an invalid number.
@@ -311,7 +311,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Get the number of elements in the JSONArray, included nulls.
-     * 
+     *
      * @return The length (or size).
      */
     public int length() {
@@ -320,7 +320,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Get the optional object value associated with an index.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return An object value, or null if there is no object at that index.
      */
@@ -333,7 +333,7 @@ public class JSONArray implements Serializable {
      * Get the optional boolean value associated with an index. It returns false
      * if there is no value at that index, or if the value is not Boolean.TRUE
      * or the String "true".
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return The truth.
      */
@@ -345,7 +345,7 @@ public class JSONArray implements Serializable {
      * Get the optional boolean value associated with an index. It returns the
      * defaultValue if there is no value at that index or if it is not a Boolean
      * or the String "true" or "false" (case insensitive).
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @param defaultValue A boolean default.
      * @return The truth.
@@ -362,7 +362,7 @@ public class JSONArray implements Serializable {
      * Get the optional double value associated with an index. NaN is returned
      * if there is no value for the index, or if the value is not a number and
      * cannot be converted to a number.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return The value.
      */
@@ -374,7 +374,7 @@ public class JSONArray implements Serializable {
      * Get the optional double value associated with an index. The defaultValue
      * is returned if there is no value for the index, or if the value is not a
      * number and cannot be converted to a number.
-     * 
+     *
      * @param index subscript
      * @param defaultValue The default value.
      * @return The value.
@@ -391,7 +391,7 @@ public class JSONArray implements Serializable {
      * Get the optional int value associated with an index. Zero is returned if
      * there is no value for the index, or if the value is not a number and
      * cannot be converted to a number.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return The value.
      */
@@ -403,7 +403,7 @@ public class JSONArray implements Serializable {
      * Get the optional int value associated with an index. The defaultValue is
      * returned if there is no value for the index, or if the value is not a
      * number and cannot be converted to a number.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @param defaultValue The default value.
      * @return The value.
@@ -418,7 +418,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Get the optional JSONArray associated with an index.
-     * 
+     *
      * @param index subscript
      * @return A JSONArray value, or null if the index has no value, or if the
      *         value is not a JSONArray.
@@ -432,7 +432,7 @@ public class JSONArray implements Serializable {
      * Get the optional JSONObject associated with an index. Null is returned if
      * the key is not found, or null if the index has no value, or if the value
      * is not a JSONObject.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return A JSONObject value.
      */
@@ -445,7 +445,7 @@ public class JSONArray implements Serializable {
      * Get the optional long value associated with an index. Zero is returned if
      * there is no value for the index, or if the value is not a number and
      * cannot be converted to a number.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return The value.
      */
@@ -457,7 +457,7 @@ public class JSONArray implements Serializable {
      * Get the optional long value associated with an index. The defaultValue is
      * returned if there is no value for the index, or if the value is not a
      * number and cannot be converted to a number.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @param defaultValue The default value.
      * @return The value.
@@ -474,7 +474,7 @@ public class JSONArray implements Serializable {
      * Get the optional string value associated with an index. It returns an
      * empty string if there is no value at that index. If the value is not a
      * string and is not null, then it is coverted to a string.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @return A String value.
      */
@@ -485,7 +485,7 @@ public class JSONArray implements Serializable {
     /**
      * Get the optional string associated with an index. The defaultValue is
      * returned if the key is not found.
-     * 
+     *
      * @param index The index must be between 0 and length() - 1.
      * @param defaultValue The default value.
      * @return A String value.
@@ -497,7 +497,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Append a boolean value. This increases the array's length by one.
-     * 
+     *
      * @param value A boolean value.
      * @return this.
      */
@@ -509,7 +509,7 @@ public class JSONArray implements Serializable {
     /**
      * Put a value in the JSONArray, where the value will be a JSONArray which
      * is produced from a Collection.
-     * 
+     *
      * @param value A Collection value.
      * @return this.
      */
@@ -520,7 +520,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Append a double value. This increases the array's length by one.
-     * 
+     *
      * @param value A double value.
      * @throws JSONException if the value is not finite.
      * @return this.
@@ -534,7 +534,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Append an int value. This increases the array's length by one.
-     * 
+     *
      * @param value An int value.
      * @return this.
      */
@@ -545,19 +545,20 @@ public class JSONArray implements Serializable {
 
     /**
      * Append an long value. This increases the array's length by one.
-     * 
+     *
      * @param value A long value.
      * @return this.
      */
     public JSONArray put(long value) {
-        put(new Long(value));
+        //put(new Long(value));
+        put(Long.valueOf(value));
         return this;
     }
 
     /**
      * Put a value in the JSONArray, where the value will be a JSONObject which
      * is produced from a Map.
-     * 
+     *
      * @param value A Map value.
      * @return this.
      */
@@ -568,7 +569,7 @@ public class JSONArray implements Serializable {
 
     /**
      * Append an object value. This increases the array's length by one.
-     * 
+     *
      * @param value An object value. The value should be a Boolean, Double,
      *        Integer, JSONArray, JSONObject, Long, or String, or the
      *        JSONObject.NULL object.
@@ -583,7 +584,7 @@ public class JSONArray implements Serializable {
      * Put or replace a boolean value in the JSONArray. If the index is greater
      * than the length of the JSONArray, then null elements will be added as
      * necessary to pad it out.
-     * 
+     *
      * @param index The subscript.
      * @param value A boolean value.
      * @return this.
@@ -597,7 +598,7 @@ public class JSONArray implements Serializable {
     /**
      * Put a value in the JSONArray, where the value will be a JSONArray which
      * is produced from a Collection.
-     * 
+     *
      * @param index The subscript.
      * @param value A Collection value.
      * @return this.
@@ -613,7 +614,7 @@ public class JSONArray implements Serializable {
      * Put or replace a double value. If the index is greater than the length of
      * the JSONArray, then null elements will be added as necessary to pad it
      * out.
-     * 
+     *
      * @param index The subscript.
      * @param value A double value.
      * @return this.
@@ -629,7 +630,7 @@ public class JSONArray implements Serializable {
      * Put or replace an int value. If the index is greater than the length of
      * the JSONArray, then null elements will be added as necessary to pad it
      * out.
-     * 
+     *
      * @param index The subscript.
      * @param value An int value.
      * @return this.
@@ -644,21 +645,22 @@ public class JSONArray implements Serializable {
      * Put or replace a long value. If the index is greater than the length of
      * the JSONArray, then null elements will be added as necessary to pad it
      * out.
-     * 
+     *
      * @param index The subscript.
      * @param value A long value.
      * @return this.
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, long value) throws JSONException {
-        put(index, new Long(value));
+        //put(index, new Long(value));
+        put(index, Long.valueOf(value));
         return this;
     }
 
     /**
      * Put a value in the JSONArray, where the value will be a JSONObject which
      * is produced from a Map.
-     * 
+     *
      * @param index The subscript.
      * @param value The Map value.
      * @return this.
@@ -674,7 +676,7 @@ public class JSONArray implements Serializable {
      * Put or replace an object value in the JSONArray. If the index is greater
      * than the length of the JSONArray, then null elements will be added as
      * necessary to pad it out.
-     * 
+     *
      * @param index The subscript.
      * @param value The value to put into the array. The value should be a
      *        Boolean, Double, Integer, JSONArray, JSONObject, Long, or String,
@@ -702,7 +704,7 @@ public class JSONArray implements Serializable {
     /**
      * Produce a JSONObject by combining a JSONArray of names with the values of
      * this JSONArray.
-     * 
+     *
      * @param names A JSONArray containing a list of key strings. These will be
      *        paired with the values.
      * @return A JSONObject, or null if there are no names or if this JSONArray
@@ -727,7 +729,7 @@ public class JSONArray implements Serializable {
      * the array contains an invalid number.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
-     * 
+     *
      * @return a printable, displayable, transmittable representation of the
      *         array.
      */
@@ -735,14 +737,15 @@ public class JSONArray implements Serializable {
         try {
             return '[' + join(",") + ']';
         } catch (Exception e) {
-            return null;
+            //return null;
+            return "";
         }
     }
 
     /**
      * Make a prettyprinted JSON text of this JSONArray. Warning: This method
      * assumes that the data structure is acyclical.
-     * 
+     *
      * @param indentFactor The number of spaces to add to each level of
      *        indentation.
      * @return a printable, displayable, transmittable representation of the
@@ -758,7 +761,7 @@ public class JSONArray implements Serializable {
     /**
      * Make a prettyprinted JSON text of this JSONArray. Warning: This method
      * assumes that the data structure is acyclical.
-     * 
+     *
      * @param indentFactor The number of spaces to add to each level of
      *        indentation.
      * @param indent The indention of the top level.
@@ -803,7 +806,7 @@ public class JSONArray implements Serializable {
      * compactness, no whitespace is added.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
-     * 
+     *
      * @return The writer.
      * @throws JSONException
      */
